--- a/index.html
+++ b/index.html
@@ -143,27 +143,27 @@
     </div>
 
     <div class="col-md-6">
-      <input type="text" class="form-control i" id="inputemail" placeholder="Enter your Email" onkeyup="validatInput(this)">
+      <input type="text" class="form-control s" id="inputemail" placeholder="Enter your Email" onkeyup="validatInput(this)">
       <div id="inputemailBox" class="text-danger d-none text-bg-danger rounded-3  m-2 text-white p-3">Email not valid *exemple@yyy.zzz</div>
     </div>
 
     <div class="col-md-6">
-      <input type="text" class="form-control i" id="inputphone" placeholder="Enter your Phone" onkeyup="validatInput(this)">
+      <input type="text" class="form-control s" id="inputphone" placeholder="Enter your Phone" onkeyup="validatInput(this)">
       <div id="inputphoneBox" class="text-danger d-none text-bg-danger rounded-3  m-2 text-white p-3">Enter valid Phone Number</div>
     </div>
 
     <div class="col-md-6">
-      <input type="number" class="form-control i" id="inputAge" placeholder="Enter your Age" onkeyup="validatInput(this)">
+      <input type="number" class="form-control s" id="inputAge" placeholder="Enter your Age" onkeyup="validatInput(this)">
       <div id="inputAgeBox" class="text-danger d-none text-bg-danger rounded-3  m-2 text-white p-3">Enter valid age</div>
     </div>
 
     <div class="col-md-6">
-      <input type="password" class="form-control i" id="inputpassword" placeholder="Enter your Password" onkeyup="validatInput(this)">
+      <input type="password" class="form-control s" id="inputpassword" placeholder="Enter your Password" onkeyup="validatInput(this)">
       <div id="inputpasswordBox" class="text-danger d-none text-bg-danger rounded-3  m-2 text-white p-3">Enter valid password *Minimum eight characters, at least one letter and one number:*</div>
     </div>
 
     <div class="col-md-6">
-      <input type="password" class="form-control i" id="inputrepassword" placeholder="Repassword" onkeyup="validatInput(this)">
+      <input type="password" class="form-control s" id="inputrepassword" placeholder="Repassword" onkeyup="validatInput(this)">
       <div id="inputrepasswordBox" class="text-danger d-none text-bg-danger rounded-3  m-2 text-white p-3">Enter valid repassword</div>
     </div>
 
