--- a/index.html
+++ b/index.html
@@ -69,8 +69,9 @@
 </div>
 
 <div class="searchname">
+  <div class="contanair">
     <div class="row" id="row-search"></div>
-</div>
+</div></div>
 
 </div>
 
