--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
        
     </div>
 </div>
-<div class="search d-flex justify-content-center align-items-center w-75 mx-auto gap-4 d-none p-5">
+<div class="search d-none d-flex justify-content-center align-items-center w-75 mx-auto gap-4 p-5">
     <input type="text" class="form-control w-50" placeholder="Search By Name" id="search-name">
     <input type="text" class="form-control w-50" placeholder="Search By First Letter" id="search-letter"maxlength="1">
 </div>
@@ -71,8 +71,13 @@
 <div class="searchname">
   <div class="contanair">
     <div class="row" id="row-search"></div>
-</div></div>
+  </div>
+</div>
 
+<div class="search-det d-none">
+  <div class="contanair">
+    <div class="row" id="row-search-det"></div>
+  </div>
 </div>
 
 
